feat: elevator moves up and down with player element

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   <body>
     <h1>Ascensor! - A DOM manipulation game</h1>
     <div id="main">
-      <div id="board">
-        <div id="player"></div>
-      </div>
+      <div id="board"></div>
     </div>
   </body>
 </html>
