feat: objectives appear dynamically, player can shoot and hit objective

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <body>
     <h1>Ascensor! - A DOM manipulation game</h1>
     <div id="main">
-      <div id="board"></div>
+      <div id="board">
+        <div class="obstacle"></div>
+      </div>
     </div>
   </body>
 </html>
