fix: points no longer duplicate when bullet hits objective

--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
     <script src="./js/app.js" defer></script>
   </head>
   <body>
-    <h1>Ascensor! - A DOM manipulation game</h1>
+    <h1>Hit Em! <br />A DOM manipulation shooting game</h1>
     <div id="main">
+      <div id="instructions">
+        <h3>How To Play</h3>
+      </div>
       <div id="board">
-        <div class="obstacle"></div>
+        <div id="points">
+          <h2>POINTS: <span id="points-selector"></span></h2>
+        </div>
       </div>
     </div>
   </body>
