add known bugs section to README

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2>POINTS: <span id="points-selector"></span></h2>
         </div>
         <div id="timer">
-          <h2>TIME LEFT: 00:00</h2>
+          <h2>TIME LEFT: <span id="time-remaining">01:00</span></h2>
         </div>
       </div>
     </div>
