Feat: Accomplish MVP, main functionality ready

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="intro">
-      <h1>Shoot Em! <br />A DOM manipulation shooting game</h1>
+      <h1>Shoot 'Em! <br />A DOM manipulation shooting game</h1>
       <div id="instructions">
         <div id="points">
           <h2>POINTS: <span id="points-selector"></span></h2>
