feat: objectives give 1 or 2 points depending on its type

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
           <li>Shoot: <img class="icons" src="./images/space.png" alt="spacebar key"></li>
         </ul>
       </div>
+      <div id="point-system">
+        <h3>Point system:</h3>
+        <ul>
+          <li>Black birds: 1 point</li>
+          <li>White birds: 2 points</li>
+        </ul>
+      </div>
       <div id="instructions">
         <div id="points">
           <h2>POINTS: <span id="points-selector"></span></h2>
