fix: added more contect in the title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="intro">
-      <h1>Shoot 'Em! <br> Hit Birds and Get Points!</h1>
+      <h1>Shoot 'Em! <br> Hit Birds and Get Points Before Time Runs Out!</h1>
       <div id="info">
         <h3>Instructions</h3>
         <ul>
